@@ -7,6 +7,8 @@ Unreleased
 
 NOTE: Upgrading from 0.49 or earlier versions requires a full cluster restart
 
+ - Added ``probe_timestamp`` expressions for sys.nodes.os and sys.nodes.process
+
  - Fix: Stats table log entry was missing for delete-by-query statements.
 
  - Fix: made it possible to filter on all types of table settings
